Updated changelog for release.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-ceibal-chrome-config (0.1) UNRELEASED; urgency=low
+ceibal-chrome-config (0.1) tatu; urgency=low
 
   * Primera versión.
 
- -- Plan Ceibal <ceibal@plan.ceibal.edu.uy>  Tue, 09 Dec 2014 10:37:25 +0000
+ -- Plan Ceibal <ceibal@plan.ceibal.edu.uy>  Tue, 09 Dec 2014 11:23:03 -0200
